[gd_scene load_steps=9 format=3 uid="uid://xwms2pelbp61"]

[ext_resource type="Script" path="res://scripts/bird.gd" id="1_x1ugu"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qwrly"]
albedo_color = Color(0.0214346, 0.0214346, 0.0214346, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_gap5j"]
material = SubResource("StandardMaterial3D_qwrly")

[sub_resource type="PrismMesh" id="PrismMesh_yakxg"]

[sub_resource type="SphereMesh" id="SphereMesh_dbtgc"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fr57d"]
albedo_color = Color(1, 0.752941, 0.129412, 1)

[sub_resource type="PrismMesh" id="PrismMesh_df6pr"]
material = SubResource("StandardMaterial3D_fr57d")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_m41i5"]

[node name="bird" type="CharacterBody3D"]
script = ExtResource("1_x1ugu")

[node name="body" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("CapsuleMesh_gap5j")

[node name="wing1" type="MeshInstance3D" parent="."]
transform = Transform3D(-1.73106e-08, -0.58916, 0, 0.396021, -2.5753e-08, 0, 0, 0, 1.23222, -0.62761, 0, 0)
mesh = SubResource("PrismMesh_yakxg")

[node name="wing2" type="MeshInstance3D" parent="."]
transform = Transform3D(-1.73106e-08, 0.58916, 0, -0.396021, -2.5753e-08, 0, 0, 0, 1.23222, 0.628, 0, 0)
mesh = SubResource("PrismMesh_yakxg")

[node name="eye" type="MeshInstance3D" parent="."]
transform = Transform3D(0.175, 0, 0, 0, 0.175, 0, 0, 0, 0.175, 0.227235, 0.234138, -0.853239)
mesh = SubResource("SphereMesh_dbtgc")

[node name="eye2" type="MeshInstance3D" parent="."]
transform = Transform3D(0.175, 0, 0, 0, 0.175, 0, 0, 0, 0.175, -0.227, 0.234, -0.853)
mesh = SubResource("SphereMesh_dbtgc")

[node name="beak" type="MeshInstance3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, -3.27835e-08, 0.2, 0, -0.75, -8.74228e-09, 0, 0, -0.914928)
mesh = SubResource("PrismMesh_df6pr")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CapsuleShape3D_m41i5")

[node name="HuntTimer" type="Timer" parent="."]
wait_time = 6.0

[node name="ChillTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="AscendTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="HuntTimer" to="." method="_on_HuntTimer_timeout"]
[connection signal="timeout" from="ChillTimer" to="." method="_on_ChillTimer_timeout"]
[connection signal="timeout" from="AscendTimer" to="." method="_on_AscendTimer_timeout"]
